--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,27 +1,6 @@
-#root {
-  max-width: 1280px;
+#main {
+  width: 80%;
+  background-color: #efefef;
   margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
-}
-
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.solid:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
-}
-
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
+  padding: 5px 0px;
 }
